fix(layout): align the post property to the left

--- a/src/styles/notion.css
+++ b/src/styles/notion.css
@@ -193,7 +193,7 @@
 
 .notion-collection-row-property .notion-property {
   display: flex;
-  justify-content: center;
+  justify-content: left;
 }
 
 .notion-collection-row-value {
